fixes P font-size on mobile

--- a/assets/scss/_nuxt-content.scss
+++ b/assets/scss/_nuxt-content.scss
@@ -41,10 +41,6 @@
     @apply text-xl mt-12 mb-3;
   }
 
-  .introduction {
-    @apply text-2xl my-10;
-  }
-
   a {
     text-decoration: underline;
     position: relative;
@@ -75,5 +71,13 @@
     li {
       @apply mb-2;
     }
+  }
+
+  p {
+    @apply text-base;
+  }
+
+  p.introduction {
+    @apply text-xl md:text-2xl my-10;
   }
 }
